Configuração do ESLint e Prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,9 @@
 {
-    "eslint.autoFixOnSave":  true,
-    "eslint.validate":  [
+  "eslint.validate": [
       "javascript",
-      {"language":  "typescript",  "autoFix":  true  },
-    ],
-    "editor.formatOnSave":  true,
-    "":  {
-      "editor.formatOnSave":  false,
-    },
-    "[typescript]":  {
-      "editor.formatOnSave":  false,
-    }
+      "typescript"
+  ],
+  "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true
   }
+}
