--- a/app/package.json
+++ b/app/package.json
@@ -14,14 +14,14 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.5.26",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.26",
     "@types/multer": "^1.4.3",
     "@types/yup": "^0.29.5",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" &amp;&amp; exit 1",
-    "lint": "eslint --fix ./src/*",
+    "lint": "eslint . --ext .ts,.js --fix",
     "dev": "ts-node-dev --inspect=0.0.0.0:8181 --poll --respawn --transpile-only src/index.ts"
   }
 }
