--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.2",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "class-validator-jsonschema": "^2.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -10,6 +12,8 @@
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
+    "routing-controllers-openapi": "^2.2.0",
+    "swagger-ui-express": "^4.1.6",
     "typedi": "^0.8.0",
     "yup": "^0.29.1"
   },
