--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.2",
+    "amqplib": "^0.7.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -18,6 +19,7 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.5.17",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
